<resources>
    <string name="app_name">Tranquility</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_password">Change Password</string>

    <string name="menu_home">Home</string>
    <string name="menu_chat">New Chat</string>
    <string name="menu_history">Chat History</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="back_button_description">Back</string>
    <string name="mental_health_advice">Here are some mental health advice: ...\n</string>


</resources>