<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_chat" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_setting" />


    </group>

    <!--<item android:title = "@string/action_settings">
      android:icon="@drawable/ic_menu_slideshow"
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_help" />
        </menu>
    </item>-->
</menu>

