<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplicationnavigation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.myapplicationnavigation.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" >

        <action
            android:id="@+id/action_chatFragment_to_mentalHealthAdviceFragment"
            app:destination="@id/nav_mental_health_advice"/>

    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.myapplicationnavigation.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myapplicationnavigation.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.myapplicationnavigation.ui.settings.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.myapplicationnavigation.ui.changePassword.ChangePasswordFragment"
        android:label="Change Password"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/nav_history_1"
        android:name="com.example.myapplicationnavigation.ui.subHistory1.SubHistory1Fragment"
        android:label="Chat History"
        tools:layout="@layout/fragment_chat_history_1" />

    <fragment
        android:id="@+id/nav_history_2"
        android:name="com.example.myapplicationnavigation.ui.subHistory2.SubHistory2Fragment"
        android:label="Chat History"
        tools:layout="@layout/fragment_chat_history_2" />

    <fragment
        android:id="@+id/nav_history_3"
        android:name="com.example.myapplicationnavigation.ui.subHistory3.SubHistory3Fragment"
        android:label="Chat History"
        tools:layout="@layout/fragment_chat_history_3" />
    <fragment
        android:id="@+id/nav_forgot_username"
        android:name="com.example.myapplicationnavigation.ui.forgotUserName.ForgotUsernameFragment"
        android:label="Forgot Username"
        tools:layout="@layout/forgot_username" />
    <fragment
        android:id="@+id/nav_forgot_password"
        android:name="com.example.myapplicationnavigation.ui.forgotPassword.ForgotPasswordFragment"
        android:label="Forgot Password"
        tools:layout="@layout/forgot_password" />

    <fragment
        android:id="@+id/nav_mental_health_advice"
        android:name="com.example.myapplicationnavigation.ui.chat.MentalHealthAdviceFragment"
        android:label="Mental Health Advice"
        tools:layout="@layout/mental_health_advice_fragment"/>

</navigation>
